Fix quote alignment
Fix quote alignment by changing padding.

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h1 {
 .three {
     display: flex;
     background-color: #fffaeb;
-    padding: 50px;
+    padding: 100px 350px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -74,7 +74,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 20px;
     border-radius: 25px;
 }
 
@@ -104,4 +104,9 @@ button {
 .quote {
     font-size: 35px;
     font-weight: 200;
+}
+
+.quotee {
+    display: flex;
+    align-self: flex-end;
 }
